PC-39-A. Codex. Refactoring swagger
